--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
